# ai-adoption

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Makefile  README.md  Taskfile.yml  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skaffold.yaml  turbo.json
.claude/commands/: 00-setup-env.md  01-scaffold-api.md  02-scaffold-frontend.md  03-setup-data-layer.md  04-build-agent-dag.md  05-setup-llm-runtime.md  06-add-observability.md  07-setup-mesh.md  08-setup-gitops.md  09-add-policy.md  10-harden.md  deploy-local.md  run-tests.md  troubleshoot.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  release.yml  sync-repos.yml
docs/: CLAUDE.md  cost-benefit-analysis-ai-tools.md  getting-started-enterprise-ai-adoption.md  stack-guide-for-freshers.md
docs/api/: graphql-schema.md
docs/architecture/: autoscaling-deep-dive.md  c4-container.md  c4-context.md  data-flow.md  network-topology.md
docs/architecture/adr/: 001-monorepo-structure.md  002-graphql-over-rest.md  003-vllm-with-cpu-fallback.md  004-prefect-over-airflow.md  005-istio-ambient-mesh.md  006-pgvector-over-dedicated-vectordb.md  007-redis-semantic-cache.md
docs/runbooks/: cicd-pipeline.md  cost-runaway-mitigation.md  deploy-gcp-full-guide.md  domain-setup.md  gcp-vm-operations.md  incident-response.md  scaling-vllm.md
docs/testing/: gcp-gpu-setup-scaling-testing.md  load-test-gcp-gpu-30-users.md
docs/tutorial/: README.md  architecture-analysis-2026.md  claude-code-guide.md  claude-code-tips.md  cloud-migration-guide.md  database-guide.md  kubernetes-scaling-guide.md  phase-00-environment.md  phase-01-api-layer.md  phase-02-frontend.md  phase-03-data-layer.md  phase-04-agent-orchestration.md  phase-05-llm-runtime.md  phase-06-observability.md  phase-07-service-mesh.md  phase-08-gitops-cicd.md  phase-09-policy-governance.md  phase-10-production-hardening.md  tech-stack-complete-guide.md
docs/tutorial/00-end-to-end-request-trace/: README.md
docs/tutorial/01-nextjs-tailwind/: README.md
docs/tutorial/02-envoy-contour/: README.md
frontend/: .env.example  CLAUDE.md  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
infra/: CLAUDE.md
infra/argocd/: app-of-apps.yaml
infra/terraform/: .gitignore  README.md
libs/: CLAUDE.md
libs/py-common/: pyproject.toml
libs/py-common/src/agent_platform_common/: __init__.py  auth.py  config.py  errors.py  logging.py  middleware.py  telemetry.py  types.py
scripts/: bootstrap.sh  gcp-vm-start.sh  gcp-vm-status.sh  gcp-vm-stop.sh  generate-graphql.sh  load-test.sh  port-forward.sh  seed-data.sh
services/: CLAUDE.md
services/agent-engine/: CLAUDE.md  Dockerfile  pyproject.toml
services/agent-engine/src/agent_engine/: llm_client.py  main.py  registry.py
services/agent-engine/src/agent_engine/agents/: base.py  quiz.py  rag.py  weather.py
services/agent-engine/src/agent_engine/flows/: agent_flow.py
services/agent-engine/src/agent_engine/graphs/: agent_graph.py
services/agent-engine/src/agent_engine/tools/: calculator.py  weather_api.py  web_search.py
services/agent-engine/tests/: conftest.py
services/agent-engine/tests/unit/: test_agents.py  test_calculator.py  test_llm_client.py  test_registry.py  test_weather_api.py  test_web_search.py
services/cache-service/: CLAUDE.md  Dockerfile  pyproject.toml
services/cache-service/src/cache_service/: embeddings.py  main.py  models.py  semantic_cache.py
services/cache-service/tests/: conftest.py
services/cache-service/tests/unit/: test_embeddings.py  test_models.py  test_semantic_cache.py
services/cost-tracker/: CLAUDE.md  Dockerfile  pyproject.toml
services/cost-tracker/src/cost_tracker/: calculator.py  collector.py  main.py  models.py
services/cost-tracker/tests/: conftest.py
services/cost-tracker/tests/unit/: test_calculator.py  test_collector.py  test_models.py
services/document-service/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
services/document-service/alembic/: env.py
services/document-service/alembic/versions/: 001_initial_schema.py  002_agents_chat_costs.py
services/document-service/src/document_service/: embeddings.py  ingest.py  main.py  models.py  retriever.py  store.py
services/document-service/tests/: conftest.py
services/document-service/tests/unit/: test_embeddings.py  test_ingest.py  test_models.py
services/gateway/: CLAUDE.md  Dockerfile  pyproject.toml
services/gateway/src/gateway/: __init__.py  dependencies.py  health.py  main.py  metrics.py  schema.py
services/gateway/src/gateway/middleware/: __init__.py  auth.py  rate_limit.py
services/gateway/src/gateway/resolvers/: __init__.py  agent.py  chat.py  cost.py  document.py
services/gateway/src/gateway/subscriptions/: __init__.py  chat_stream.py
services/gateway/tests/: conftest.py
services/gateway/tests/unit/: test_health.py  test_resolvers.py
tests/: CLAUDE.md
tests/chaos/: network-delay.yaml  pod-cpu-stress.yaml  pod-kill.yaml
tests/e2e/: conftest.py  test_full_workflow.py
tests/load/: k6-chat.js  k6-gateway.js  loadtest_gpu_30users.py  locustfile.py
tests/security/: scan-images.sh  trivy-config.yaml  zap-config.yaml
(+191 files in other folders)
