[project]
name = "agent-platform"
version = "0.1.0"
description = "FAANG-grade AI Agent Platform -- tutorial monorepo"
readme = "docs/tutorial/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.uv.workspace]
members = [
  "libs/py-common",
  "services/gateway",
  "services/agent-engine",
  "services/document-service",
  "services/cache-service",
  "services/cost-tracker",
]

[tool.uv.sources]
agent-platform-common = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services", "libs"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent_platform_common", "gateway", "agent_engine", "document_service", "cache_service", "cost_tracker"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "services", "libs"]
addopts = "-ra -q --strict-markers"
markers = [
  "unit: Unit tests (no external deps)",
  "integration: Integration tests (requires infra)",
  "e2e: End-to-end tests",
  "load: Load/performance tests",
]
