[project]
name = "agent-platform-agent-engine"
version = "0.1.0"
description = "Prefect + LangGraph agent orchestration engine"
requires-python = ">=3.11"
dependencies = [
    "agent-platform-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "prefect>=3.0.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
agent-platform-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/agent_engine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
