[project]
name = "agent-platform-cache-service"
version = "0.1.0"
description = "Redis VSS semantic cache for LLM responses"
requires-python = ">=3.11"
dependencies = [
    "agent-platform-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[tool.uv.sources]
agent-platform-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/cache_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
