[project]
name = "agent-platform-cost-tracker"
version = "0.1.0"
description = "OpenCost aggregation and $/inference tracking"
requires-python = ">=3.11"
dependencies = [
    "agent-platform-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
agent-platform-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/cost_tracker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
